src/objects/CPQ_MPW_Bundle__c.object
<CustomObject>
    <description>This object is part of the MPW20 implementation. US: 4641, Req.: 7105
It is set up to hold the Sales Items content of the MPW bundles. 
Static/Predefined Bundles: Sales Item code, quantity per 1 unit of the bundle
Dynamic Bundles: Sales Item code -&gt; the quantites are to be calculated dynamically</description>
    <fields>
        <fullName>CPQ_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the reference to the Product2 record for the Bundle. This can be either a static or dynamic bundle.</description>
        <label>Bundle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>MPW Bundles (Bundle)</relationshipLabel>
        <relationshipName>MPW_Bundles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Entry_Type__c</fullName>
        <description>This field is used to flag whether the record is for a static bundle or a dynamic bundle. It allows in selections to differentiate between the two types of bundles.</description>
        <inlineHelpText>Please flag whether the record is for a static or dynamic bundle. Static bundles contain Sales Items with a defined quantity. For dynamic bundles, the quantity is calculated during runtime.</inlineHelpText>
        <label>Entry Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                    <default>true</default>
                    <label>Static</label>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_Main_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the main bundle (e.g. MPW20) of the configuration for a static bundle.</description>
        <inlineHelpText>Please enter the main bundle of the configuration of the bundle.</inlineHelpText>
        <label>Main Bundle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>MPW Bundles</relationshipLabel>
        <relationshipName>MPW_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Quantity__c</fullName>
        <description>This field stores the quanity of a Sales Item within a bundle. This makes sense only for static bundles, as for dynamic bundles the quantities is calculated during runtime.</description>
        <inlineHelpText>The quantity shall be provided for a bundle quantity 1.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Sales_Item_Reserve__c</fullName>
        <description>This field can be used to store a Sales Item code for a SI that does not exist in the Product master data records.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field when you have to include a Sales Item that is not provided as part of the Product master data.</inlineHelpText>
        <label>Sales Item (Reserve)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Sales_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the reference to the Product2 record of the Sales Item that is part of the bundle.</description>
        <label>Sales Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>MPW Bundles (Sales Item)</relationshipLabel>
        <relationshipName>MPW_Bundles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Discount_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>MPW Bundles (Category)</relationshipLabel>
        <relationshipName>MPW_Bundles4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Reserve__c</fullName>
        <description>This field allows to store a Price if a Sales Item is not part of the Product Master Data, which means there is also no Price LIst Item for it.</description>
        <label>Price Reserve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>MPW Bundles (Product)</relationshipLabel>
        <relationshipName>MPW_Bundles3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product_Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>MPW Bundle</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MPW Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPW Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>